<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.imaginet.ventures.step.activity.AboutStepActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email|phone"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:text="@string/about_content1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email|phone"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:text="@string/about_content1_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email|phone"
            android:linksClickable="true"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:text="@string/about_content1_2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:text="@string/about_title2"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email|phone"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:text="@string/about_content2_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email|phone"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:text="@string/about_content2_2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email|phone"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:text="@string/about_content2_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="15dp"
            android:text="@string/about_title3"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email|phone"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:text="@string/about_content3_1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="email|phone"
            android:paddingBottom="25dp"
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:text="@string/about_content3_2" />


    </LinearLayout>

</ScrollView>
